-updates final styles for calendar -integrates input fields for start/stop dates -sets proper spacing between actionrow buttons

--- a/patterns/components/buttons/all-buttons.scss
+++ b/patterns/components/buttons/all-buttons.scss
@@ -20,13 +20,6 @@
     outline: none;
 }
 
-@mixin button-tiny {
-    min-height: $size-32;
-    font-size: $smaller-font-size;
-    line-height: $size-16;
-    padding: $size-8 $size-16;
-}
-
 a,
 button {
     cursor: pointer;
